--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=3000
 DATABASE_URL=mongodb+srv://admin_user:jUzouzHSaOVwJc5J@cluster0.8toxnhe.mongodb.net/first-project?retryWrites=true&w=majority&appName=Cluster0
 BCRYPT_SALT_ROUNDS=12
+DEFAULT_PASS=phuniversity!@#
