student create and user module create

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=3000
-DATABASE_URL=mongodb+srv://admin_user:jUzouzHSaOVwJc5J@cluster0.8toxnhe.mongodb.net/first-project?retryWrites=true&w=majority&appName=Cluster0
+# DATABASE_URL=mongodb://localhost:27017/phUniversityDB
+DATABASE_URL=mongodb+srv://admin_user:jUzouzHSaOVwJc5J@cluster0.8toxnhe.mongodb.net/ph-university-project?retryWrites=true&w=majority&
 BCRYPT_SALT_ROUNDS=12
 DEFAULT_PASS=phuniversity!@#
